tests/macros/input/mask.stderr
error: option `mask` does not exist for kind `input`
 --> $DIR/mask.rs:2:43
  |
2 |     let q = discourse::questions![Input { mask: todo!() }];
  |                                           ^^^^
