tests/macros/input/mask.rs
fn main() {
    let q = discourse::questions![Input { mask: todo!() }];
}
